--- a/stable-diffusion-webui-master/html/footer.html
+++ b/stable-diffusion-webui-master/html/footer.html
@@ -1,9 +1,9 @@
 <div>
-        <a href="/docs">API</a>
+        <a href="/docs">接口</a>
          • 
-        <a href="https://github.com/AUTOMATIC1111/stable-diffusion-webui">Github</a>
+        <a href="">图文模型</a>
          • 
-        <a href="https://gradio.app">Gradio</a>
+        <a href="https://gradio.app">实验</a>
          • 
         <a href="/" onclick="javascript:gradioApp().getElementById('settings_restart_gradio').click(); return false">Reload UI</a>
 </div>
