--- a/stable-diffusion-webui-master/html/footer.html
+++ b/stable-diffusion-webui-master/html/footer.html
@@ -3,7 +3,7 @@
          • 
         <a href="">图文模型</a>
          • 
-        <a href="https://gradio.app">实验</a>
+        <a href="">实验</a>
          • 
         <a href="/" onclick="javascript:gradioApp().getElementById('settings_restart_gradio').click(); return false">Reload UI</a>
 </div>
